force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>TEXT(Status__c) = &apos;Final Approval - Contract&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>