force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Authorisation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorisation Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contract Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authorisations</relationshipLabel>
    <relationshipName>Authorisations</relationshipName>
    <type>Lookup</type>
</CustomField>