force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Authorisations</relationshipLabel>
    <relationshipName>Authorisations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>