force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Contract_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorisations1</relationshipName>
    <type>Lookup</type>
</CustomField>