force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorisations</relationshipName>
    <type>Lookup</type>
</CustomField>