force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Date_Time_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Cancelled__c</fullName>
    <label>Date / Time Cancelled</label>
    <type>DateTime</type>
</CustomField>