force-app-metadata-removed/main/default/objects/Authorisation__c/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <label>Date / Time Closed</label>
    <type>DateTime</type>
</CustomField>