force-app-metadata-removed/main/default/objects/Authorisation__c/fields/isOpen__c.field-meta.xml
<CustomField>
    <fullName>isOpen__c</fullName>
    <formula>OR(
  TEXT(Status__c)= &apos;Submitted&apos;,
  TEXT(Status__c) = &apos;Initial Approval - Service Manager&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Open?</label>
    <type>Checkbox</type>
</CustomField>