force-app-metadata-removed/main/default/objects/Authorisation__c/validationRules/Number_of_Sessions_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Sessions_Val</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Number_of_Requested_Sessions__c &lt;= 0, Number_of_Requested_Sessions__c &gt; 12)</errorConditionFormula>
    <errorDisplayField>Number_of_Requested_Sessions__c</errorDisplayField>
    <errorMessage>You must enter a value between 1 and 12</errorMessage>
</ValidationRule>